--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>Functions UI</title>
-    <link rel="stylesheet" type="text/css" href="/dist/main.css">
+    <link rel="stylesheet" href="/dist/main.a02754b5f3705fffee9e.css">
 </head>
 
 <body>
-    <div id="app">
-    </div>
-    <script type="text/javascript" src="/dist/main.js"></script>
+    <div id="app"></div>
+    <script type="text/javascript" src="/dist/main.a02754b5f3705fffee9e.js"></script>
 </body>
 
 </html>
