feat: add readkey algo

--- a/ui/src/app.html
+++ b/ui/src/app.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width" />
-	<title>TamiDB</title>
+	<title>LessDB</title>
 	%sveltekit.head%
 </head>
 
